<resources>
    <string name="app_name">SoulsBuildPlanner</string>
    <string name="hint_buildTitle">Build Title</string>
    <string name="button_addBuild">Add Build</string>
    <string name="hint_buildVigor">Vigor</string>
    <string name="hint_buildAttunement">Attunement</string>
    <string name="hint_buildEndurance">Endurance</string>
    <string name="hint_buildVitality">Vitality</string>
    <string name="hint_buildStrength">Strength</string>
    <string name="hint_buildDexterity">Dexterity</string>
    <string name="hint_buildIntelligence">Intelligence</string>
    <string name="hint_buildFaith">Faith</string>
    <string name="hint_buildLuck">Luck</string>
    <string name="menu_addBuild">Add</string>
    <string name="menu_cancelBuild">Cancel</string>
    <string name="enter_build_title">Please enter a Build title</string>
    <string name="save_build">Save Build</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_build_image">Select Build Image</string>
    <string name="change_build_image">Change Build Image</string>

    <string name="buildNumConcat">No. of Builds: %1$d</string>
    <string name="levelConcat">Level:\n %1$s</string>
    <string name="menu_deleteBuild">Delete</string>
    <string name="menu_info">Info</string>
    <string name="buildNumberDetails">No. of Builds:</string>
    <string name="aboutAppTitle"><b><u>About App</u></b></string>
    <string name="aboutAppDescription">The app is a character build planner for the action role-playing game Dark Souls. It allows the user to create a build                                                   consisting of a build title and 9 different values representing character stats present in the game. After entering these values 3 additional details are added to the build. The build level, which is the sum of each stat. The total souls required shows how many souls are needed to achieve the build level. The next level stat shows how many souls willl be required to advance to the next level.</string>
</resources>