<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BuildPlannerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBrown"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/lightGrey" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/buildTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_buildTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/lightGrey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <EditText
                        android:id="@+id/buildVigor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildVigor"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildAttunement"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildAttunement"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildEndurance"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildEndurance"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <EditText
                        android:id="@+id/buildVitality"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildVitality"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildStrength"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildStrength"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildDexterity"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildDexterity"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <EditText
                        android:id="@+id/buildIntelligence"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildIntelligence"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildFaith"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildFaith"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/buildLuck"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_buildLuck"
                        android:inputType="numberDecimal"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/lightGrey"
                        android:textSize="14sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/lightBrown"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addBuild"
                    android:textColor="@color/lightGrey"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>